[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scenes/Objects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tilemaps/ts_pyramid_v2.tres" type="TileSet" id=2]
[ext_resource path="res://Backgrounds/bg_desert.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Objects/Objective.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Objects/Portal.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/scr_background.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Objects/MovingPlatformSine.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/scr_deadzone.gd" type="Script" id=8]
[ext_resource path="res://Scripts/scr_path.gd" type="Script" id=9]
[ext_resource path="res://Scripts/scr_trigger_objective.gd" type="Script" id=10]
[ext_resource path="res://Scenes/Objects/Enemy.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Objects/Switch.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/scr_listener_switch0.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Objects/Collectible.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scripts/scr_world1.gd" type="Script" id=15]
[ext_resource path="res://icon.png" type="Texture" id=16]
[ext_resource path="res://Scenes/Interactions/PopUp.tscn" type="PackedScene" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 224, -256, 0, 0, 0, 0, 224, -32 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -64, 0, 0, 0, 0, 0, -64, 128 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 32, 320, 0, 0, 0, 0, 32, 288 )
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 384, 32 )

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 96, -128, 0, 0, 0, 0, 96, -256 )
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 32, 32 )

[node name="World1" type="Node2D"]
position = Vector2( 0, 160 )
script = ExtResource( 15 )

[node name="background" type="ParallaxBackground" parent="."]
script = ExtResource( 6 )

[node name="bg_desert" type="TextureRect" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.013
margin_bottom = 0.200012
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NPCs" type="Node" parent="."]

[node name="Enemies" type="Node" parent="NPCs"]

[node name="Enemy0" parent="NPCs/Enemies" instance=ExtResource( 11 )]
position = Vector2( 1312, 160 )

[node name="Enemy1" parent="NPCs/Enemies" instance=ExtResource( 11 )]
position = Vector2( 1472, 160 )

[node name="Enemy2" parent="NPCs/Enemies" instance=ExtResource( 11 )]
position = Vector2( 1984, -672 )

[node name="Enemy3" parent="NPCs/Enemies" instance=ExtResource( 11 )]
position = Vector2( 2752, 352 )

[node name="Enemy4" parent="NPCs/Enemies" instance=ExtResource( 11 )]
position = Vector2( 2816, 352 )

[node name="Enemy5" parent="NPCs/Enemies" instance=ExtResource( 11 )]
position = Vector2( 2880, 352 )

[node name="Enemy6" parent="NPCs/Enemies" instance=ExtResource( 11 )]
position = Vector2( 2944, 352 )

[node name="Residents" type="Node" parent="NPCs"]

[node name="NPC1" type="Sprite" parent="NPCs/Residents"]
position = Vector2( 192, 320 )
texture = ExtResource( 16 )

[node name="PopUp" parent="NPCs/Residents/NPC1" instance=ExtResource( 17 )]
Dialogue_File = "res://_Misc/Dialogue/level1_dialogue0.txt"

[node name="NPC2" type="Sprite" parent="NPCs/Residents"]
position = Vector2( 832, 320 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="PopUp" parent="NPCs/Residents/NPC2" instance=ExtResource( 17 )]
Dialogue_File = "res://_Misc/Dialogue/level1_dialogue1.txt"

[node name="NPC3" type="Sprite" parent="NPCs/Residents"]
position = Vector2( 544, 320 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="PopUp" parent="NPCs/Residents/NPC3" instance=ExtResource( 17 )]
Dialogue_File = "res://_Misc/Dialogue/level1_tutorial0.txt"

[node name="NPC4" type="Sprite" parent="NPCs/Residents"]
position = Vector2( 2176, 352 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="PopUp" parent="NPCs/Residents/NPC4" instance=ExtResource( 17 )]
Dialogue_File = "res://_Misc/Dialogue/level1_tutorial1.txt"

[node name="NPC5" type="Sprite" parent="NPCs/Residents"]
position = Vector2( 1632, -160 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}

[node name="PopUp" parent="NPCs/Residents/NPC5" instance=ExtResource( 17 )]
Dialogue_File = "res://_Misc/Dialogue/level1_tutorial2.txt"

[node name="Pickups" type="Node" parent="."]

[node name="Collectibles" type="Node" parent="Pickups"]

[node name="0" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 288, 288 )

[node name="1" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 320, 288 )

[node name="2" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 352, 288 )

[node name="3" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 384, 288 )

[node name="4" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 416, 288 )

[node name="5" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 448, 288 )

[node name="6" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 448, 288 )

[node name="7" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 320, -160 )

[node name="8" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 352, -160 )

[node name="9" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 320, -192 )

[node name="10" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 352, -192 )

[node name="11" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 320, -224 )

[node name="12" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 352, -224 )

[node name="13" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 320, -256 )

[node name="14" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 352, -256 )

[node name="15" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 320, -288 )

[node name="16" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 352, -288 )

[node name="17" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 576, -352 )

[node name="18" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 608, -352 )

[node name="19" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 640, -352 )

[node name="20" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 672, -352 )

[node name="21" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 704, -352 )

[node name="22" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 736, -352 )

[node name="23" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 2240, -160 )

[node name="24" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 2240, -128 )

[node name="25" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 2240, -96 )

[node name="26" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 2240, -64 )

[node name="27" parent="Pickups/Collectibles" instance=ExtResource( 14 )]
position = Vector2( 2240, -32 )

[node name="Objectives" type="Node" parent="Pickups"]

[node name="1" parent="Pickups/Objectives" instance=ExtResource( 4 )]
position = Vector2( 1216, 0 )

[node name="2" parent="Pickups/Objectives" instance=ExtResource( 4 )]
position = Vector2( 2272, -512 )
Pie_Sprite = "MincePie"

[node name="3" parent="Pickups/Objectives" instance=ExtResource( 4 )]
position = Vector2( 3232, 0 )
Pie_Sprite = "SteakAndCheese"

[node name="trigger_objective1" type="Area2D" parent="."]
position = Vector2( 1216, -160 )
script = ExtResource( 10 )
Actor_Objects = [ "res://Scripts/scr_objective.gd" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger_objective1"]
shape = SubResource( 1 )

[node name="path" type="Path2D" parent="trigger_objective1"]
curve = SubResource( 2 )
script = ExtResource( 9 )

[node name="follow" type="PathFollow2D" parent="trigger_objective1/path"]
position = Vector2( 224, -256 )
rotation = 1.5708
rotate = false
loop = false

[node name="tiles_platform" type="TileMap" parent="trigger_objective1/path/follow"]
position = Vector2( 0, -32 )
rotation = -1.5708
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -2, 0, 0, -1, 1, 0, -65536, 2, 0 )

[node name="trigger_objective2" type="Area2D" parent="."]
position = Vector2( 2272, -672 )
script = ExtResource( 10 )
Actor_Objects = [ "res://Scripts/scr_objective.gd" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger_objective2"]
shape = SubResource( 1 )

[node name="path" type="Path2D" parent="trigger_objective2"]
position = Vector2( 288, 160 )
curve = SubResource( 3 )
script = ExtResource( 9 )
Speed = 50.0

[node name="follow" type="PathFollow2D" parent="trigger_objective2/path"]
position = Vector2( -64, 0 )
rotation = 1.5708
rotate = false
loop = false

[node name="tiles_platform" type="TileMap" parent="trigger_objective2/path/follow"]
position = Vector2( 0, -64 )
rotation = -1.5708
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -3, 1, 0, -2, 1, 0 )

[node name="trigger_objective3" type="Area2D" parent="."]
position = Vector2( 3232, -160 )
script = ExtResource( 10 )
Actor_Objects = [ "res://Scripts/scr_objective.gd" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger_objective3"]
shape = SubResource( 4 )

[node name="path" type="Path2D" parent="trigger_objective3"]
curve = SubResource( 5 )
script = ExtResource( 9 )

[node name="follow" type="PathFollow2D" parent="trigger_objective3/path"]
position = Vector2( 32, 320 )
rotate = false
loop = false

[node name="TileMap" type="TileMap" parent="trigger_objective3/path/follow"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65537, 0, 0, 65535, 0, 0 )

[node name="MovingPlatform0" parent="." instance=ExtResource( 7 )]
position = Vector2( 1792, -512 )
distance = 256.0
direction = Vector2( 0, 1 )

[node name="MovingPlatform1" parent="." instance=ExtResource( 7 )]
position = Vector2( 2272, -64 )
distance = 320.0
direction = Vector2( 0, -1 )

[node name="MovingPlatform2" parent="." instance=ExtResource( 7 )]
position = Vector2( 2752, 32 )
distance = 128.0
direction = Vector2( 1, -1 )

[node name="deadzone0" type="Area2D" parent="."]
position = Vector2( 2048, 384 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="deadzone0"]
shape = SubResource( 6 )

[node name="deadzone1" type="Area2D" parent="."]
position = Vector2( -256, 384 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="deadzone1"]
shape = SubResource( 6 )

[node name="deadzone2" type="Area2D" parent="."]
position = Vector2( 3712, 384 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="deadzone2"]
shape = SubResource( 6 )

[node name="Switch0" parent="." instance=ExtResource( 12 )]
position = Vector2( 3040, -160 )

[node name="switch_listener" type="Node2D" parent="Switch0"]
script = ExtResource( 13 )

[node name="path" type="Path2D" parent="Switch0/switch_listener"]
curve = SubResource( 7 )
script = ExtResource( 9 )
Speed = 50.0

[node name="follow" type="PathFollow2D" parent="Switch0/switch_listener/path"]
position = Vector2( 96, -128 )
rotate = false
loop = false

[node name="tiles_gate" type="TileMap" parent="Switch0/switch_listener/path/follow"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 7, 0, 0, 7, 0, 131071, 16, 0, 65536, 5, 0, 196607, 16, 0, 131072, 5, 0, 262143, 16, 0, 196608, 5, 0, 327679, 7, 0, 262144, 8, 0 )

[node name="edge_left" type="StaticBody2D" parent="."]
position = Vector2( -32, 160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_left"]
shape = SubResource( 8 )

[node name="edge_left2" type="StaticBody2D" parent="edge_left"]
position = Vector2( 0, -64 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_left/edge_left2"]
shape = SubResource( 8 )

[node name="edge_left3" type="StaticBody2D" parent="edge_left"]
position = Vector2( 0, -128 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_left/edge_left3"]
shape = SubResource( 8 )

[node name="edge_left4" type="StaticBody2D" parent="edge_left"]
position = Vector2( 0, -192 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_left/edge_left4"]
shape = SubResource( 8 )

[node name="edge_right" type="StaticBody2D" parent="."]
position = Vector2( 3520, 192 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_right"]
shape = SubResource( 8 )

[node name="edge_right2" type="StaticBody2D" parent="edge_right"]
position = Vector2( 0, -64 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_right/edge_right2"]
shape = SubResource( 8 )

[node name="edge_right3" type="StaticBody2D" parent="edge_right"]
position = Vector2( 0, -128 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="edge_right/edge_right3"]
shape = SubResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 25
format = 1
tile_data = PoolIntArray( -2359289, 4, 0, -2359288, 4, 0, -2293753, 4, 0, -2293752, 4, 0, -2228217, 4, 0, -2228216, 4, 0, -2162681, 4, 0, -2162680, 4, 0, -2097145, 4, 0, -2097144, 4, 0, -2031609, 4, 0, -2031608, 4, 0, -1966073, 4, 0, -1966072, 4, 0, -1900537, 4, 0, -1900536, 4, 0, -1900475, 4, 0, -1835001, 4, 0, -1835000, 4, 0, -1834939, 4, 0, -1769465, 17, 0, -1769464, 5, 0, -1769403, 4, 0, -1703929, 17, 0, -1703928, 5, 0, -1703867, 4, 0, -1703857, 5, 0, -1638393, 17, 0, -1638392, 5, 0, -1638342, 0, 0, -1638341, 1, 0, -1638340, 1, 0, -1638339, 1, 0, -1638338, 1, 0, -1638337, 1, 0, -1638336, 2, 0, -1638331, 4, 0, -1638321, 5, 0, -1572857, 18, 0, -1572856, 5, 0, -1572806, 3, 0, -1572800, 5, 0, -1572795, 5, 0, -1572785, 5, 0, -1507321, 17, 0, -1507320, 5, 0, -1507270, 17, 0, -1507264, 14, 0, -1507259, 5, 0, -1507249, 5, 0, -1441785, 18, 0, -1441784, 5, 0, -1441780, 4, 0, -1441734, 17, 0, -1441728, 14, 0, -1441723, 5, 0, -1441713, 5, 0, -1376249, 17, 0, -1376248, 5, 0, -1376244, 4, 0, -1376198, 17, 0, -1376192, 15, 0, -1376187, 5, 0, -1376177, 5, 0, -1310713, 16, 0, -1310712, 5, 0, -1310708, 4, 0, -1310662, 17, 0, -1310656, 15, 0, -1310652, 1, 0, -1310651, 4, 0, -1310650, 1, 0, -1310649, 1, 0, -1310648, 1, 0, -1310647, 1, 0, -1310646, 1, 0, -1310645, 1, 0, -1310641, 5, 0, -1245177, 17, 0, -1245176, 5, 0, -1245172, 4, 0, -1245126, 17, 0, -1245120, 15, 0, -1245105, 5, 0, -1179641, 17, 0, -1179640, 5, 0, -1179636, 14, 0, -1179590, 17, 0, -1179584, 15, 0, -1179569, 5, 0, -1114105, 16, 0, -1114104, 5, 0, -1114100, 14, 0, -1114054, 17, 0, -1114048, 15, 0, -1114043, 0, 0, -1114042, 1, 0, -1114041, 1, 0, -1114040, 1, 0, -1114039, 1, 0, -1114038, 1, 0, -1114037, 1, 0, -1114036, 1, 0, -1114033, 4, 0, -1048569, 17, 0, -1048568, 5, 0, -1048564, 14, 0, -1048518, 17, 0, -1048512, 15, 0, -1048507, 5, 0, -983033, 17, 0, -983032, 5, 0, -983028, 14, 0, -983023, 1, 0, -983022, 1, 0, -983021, 1, 0, -983020, 1, 0, -983019, 1, 0, -983018, 1, 0, -983017, 2, 0, -982982, 17, 0, -982976, 15, 0, -982971, 5, 0, -917497, 17, 0, -917496, 5, 0, -917492, 14, 0, -917482, 3, 0, -917481, 5, 0, -917446, 17, 0, -917440, 15, 0, -917435, 5, 0, -851961, 17, 0, -851960, 5, 0, -851956, 14, 0, -851946, 17, 0, -851945, 5, 0, -851910, 17, 0, -851904, 16, 0, -851903, 4, 0, -851902, 4, 0, -851901, 4, 0, -851900, 4, 0, -851899, 4, 0, -851896, 1, 0, -851895, 1, 0, -851894, 1, 0, -851893, 1, 0, -851892, 1, 0, -851872, 17, 0, -851871, 4, 0, -851870, 4, 0, -851869, 4, 0, -851868, 4, 0, -851867, 4, 0, -851866, 4, 0, -851865, 4, 0, -851864, 4, 0, -851863, 4, 0, -851862, 4, 0, -786425, 17, 0, -786424, 5, 0, -786420, 14, 0, -786410, 17, 0, -786409, 5, 0, -786374, 16, 0, -786336, 17, 0, -786335, 4, 0, -786334, 4, 0, -786333, 4, 0, -786332, 4, 0, -786331, 4, 0, -786330, 4, 0, -786329, 4, 0, -786328, 4, 0, -786327, 4, 0, -786326, 4, 0, -720889, 17, 0, -720888, 5, 0, -720884, 14, 0, -720874, 17, 0, -720873, 5, 0, -720838, 17, 0, -720828, 14, 0, -720800, 17, 0, -720799, 4, 0, -720798, 4, 0, -720797, 4, 0, -720796, 4, 0, -720795, 3, 0, -720794, 4, 0, -720793, 4, 0, -720792, 4, 0, -720791, 4, 0, -720790, 4, 0, -655353, 18, 0, -655352, 5, 0, -655348, 14, 0, -655338, 17, 0, -655337, 5, 0, -655302, 16, 0, -655292, 14, 0, -655264, 17, 0, -655263, 4, 0, -655262, 4, 0, -655261, 3, 0, -655260, 4, 0, -655259, 4, 0, -655258, 4, 0, -655257, 4, 0, -655256, 3, 0, -655255, 4, 0, -655254, 4, 0, -589817, 17, 0, -589816, 5, 0, -589802, 3, 0, -589801, 5, 0, -589775, 0, 0, -589774, 1, 0, -589773, 1, 0, -589772, 1, 0, -589771, 1, 0, -589770, 2, 0, -589766, 16, 0, -589756, 14, 0, -589728, 7, 0, -589725, 7, 0, -589724, 4, 0, -589723, 4, 0, -589722, 4, 0, -589721, 4, 0, -589720, 4, 0, -589719, 4, 0, -589718, 4, 0, -524281, 17, 0, -524280, 5, 0, -524266, 17, 0, -524265, 5, 0, -524234, 5, 0, -524220, 14, 0, -524185, 4, 0, -524184, 4, 0, -524183, 4, 0, -524182, 4, 0, -458745, 17, 0, -458744, 5, 0, -458730, 17, 0, -458729, 5, 0, -458698, 5, 0, -458684, 14, 0, -458649, 4, 0, -458648, 18, 0, -458647, 4, 0, -458646, 4, 0, -393209, 17, 0, -393208, 5, 0, -393207, 1, 0, -393206, 1, 0, -393205, 1, 0, -393204, 1, 0, -393203, 1, 0, -393202, 1, 0, -393201, 1, 0, -393200, 1, 0, -393199, 2, 0, -393194, 17, 0, -393193, 5, 0, -393162, 5, 0, -393148, 14, 0, -393113, 4, 0, -393112, 4, 0, -393111, 4, 0, -393110, 4, 0, -327663, 15, 0, -327658, 17, 0, -327657, 5, 0, -327626, 5, 0, -327577, 4, 0, -327576, 4, 0, -327575, 4, 0, -327574, 4, 0, -262127, 15, 0, -262122, 17, 0, -262121, 5, 0, -262109, 0, 0, -262108, 1, 0, -262107, 1, 0, -262106, 1, 0, -262105, 1, 0, -262104, 1, 0, -262103, 1, 0, -262102, 1, 0, -262101, 1, 0, -262100, 1, 0, -262099, 1, 0, -262098, 1, 0, -262097, 1, 0, -262096, 1, 0, -262095, 1, 0, -262094, 1, 0, -262090, 5, 0, -262053, 1, 0, -262052, 1, 0, -262051, 1, 0, -262050, 1, 0, -262049, 1, 0, -262048, 1, 0, -262047, 1, 0, -262046, 1, 0, -262045, 1, 0, -262044, 1, 0, -262043, 1, 0, -262042, 1, 0, -262041, 4, 0, -262040, 4, 0, -262039, 4, 0, -262038, 4, 0, -196591, 15, 0, -196586, 17, 0, -196585, 5, 0, -196573, 14, 0, -196554, 5, 0, -131055, 15, 0, -131050, 17, 0, -131049, 5, 0, -131037, 14, 0, -131018, 5, 0, -65519, 15, 0, -65514, 17, 0, -65513, 5, 0, -65501, 14, 0, -65482, 5, 0, 17, 14, 0, 22, 17, 0, 23, 5, 0, 35, 14, 0, 54, 5, 0, 65553, 14, 0, 65558, 17, 0, 65559, 5, 0, 65571, 14, 0, 65575, 1, 0, 65576, 1, 0, 65577, 1, 0, 65578, 1, 0, 65579, 1, 0, 65580, 1, 0, 65581, 1, 0, 65582, 1, 0, 65583, 1, 0, 65584, 1, 0, 65585, 1, 0, 65586, 1, 0, 65590, 5, 0, 65637, 0, 0, 65638, 1, 0, 65639, 1, 0, 65640, 1, 0, 65641, 1, 0, 65642, 1, 0, 65643, 1, 0, 65644, 1, 0, 131089, 14, 0, 131094, 17, 0, 131095, 5, 0, 131107, 14, 0, 131126, 5, 0, 196630, 17, 0, 196631, 5, 0, 196662, 5, 0, 262166, 17, 0, 262167, 5, 0, 262198, 5, 0, 327688, 0, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 2, 0, 327702, 17, 0, 327703, 5, 0, 327734, 5, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 4, 0, 393239, 4, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 1, 0, 393252, 1, 0, 393253, 1, 0, 393254, 1, 0, 393255, 1, 0, 393256, 1, 0, 393257, 1, 0, 393258, 1, 0, 393259, 1, 0, 393260, 1, 0, 393261, 1, 0, 393262, 1, 0, 393263, 1, 0, 393264, 1, 0, 393265, 1, 0, 393266, 1, 0, 393267, 1, 0, 393268, 1, 0, 393269, 1, 0, 393270, 5, 0, 524284, 3, 0, 524285, 4, 0, 524286, 4, 0, 524287, 4, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 4, 0, 458771, 4, 0, 458772, 4, 0, 458773, 4, 0, 458774, 4, 0, 458775, 4, 0, 458776, 4, 0, 458777, 4, 0, 458778, 4, 0, 458779, 4, 0, 458780, 4, 0, 458781, 4, 0, 458782, 4, 0, 458783, 4, 0, 458784, 4, 0, 458785, 4, 0, 458786, 4, 0, 458787, 4, 0, 458788, 4, 0, 458789, 4, 0, 458790, 4, 0, 458791, 4, 0, 458792, 4, 0, 458793, 4, 0, 458794, 4, 0, 458795, 4, 0, 458796, 4, 0, 458797, 4, 0, 458798, 4, 0, 458799, 4, 0, 458800, 4, 0, 458801, 4, 0, 458802, 4, 0, 458803, 4, 0, 458804, 4, 0, 458805, 4, 0, 458806, 4, 0, 458818, 1, 0, 458819, 1, 0, 458820, 1, 0, 458821, 1, 0, 458822, 1, 0, 458823, 1, 0, 458824, 1, 0, 458825, 1, 0, 458826, 1, 0, 458827, 1, 0, 458828, 1, 0, 458829, 1, 0, 458830, 1, 0, 458831, 1, 0, 458832, 1, 0, 458833, 1, 0, 458834, 1, 0, 458835, 1, 0, 458836, 1, 0, 458837, 1, 0, 458838, 1, 0, 458839, 1, 0, 458840, 1, 0, 458841, 1, 0, 458842, 1, 0, 458843, 1, 0, 458844, 1, 0, 458845, 1, 0, 458846, 1, 0, 458847, 1, 0, 458848, 1, 0, 458849, 1, 0, 458850, 1, 0, 458851, 1, 0, 458852, 1, 0, 458853, 1, 0, 458854, 1, 0, 458855, 1, 0, 458856, 1, 0, 458857, 1, 0, 458858, 1, 0, 458859, 1, 0, 458860, 1, 0, 458861, 1, 0, 458862, 1, 0, 458863, 1, 0, 589820, 3, 0, 589821, 4, 0, 589822, 4, 0, 589823, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 3, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 524305, 4, 0, 524306, 4, 0, 524307, 4, 0, 524308, 4, 0, 524309, 4, 0, 524310, 4, 0, 524311, 4, 0, 524312, 4, 0, 524313, 4, 0, 524314, 4, 0, 524315, 4, 0, 524316, 4, 0, 524317, 4, 0, 524318, 4, 0, 524319, 4, 0, 524320, 4, 0, 524321, 4, 0, 524322, 4, 0, 524323, 4, 0, 524324, 4, 0, 524325, 4, 0, 524326, 4, 0, 524327, 4, 0, 524328, 4, 0, 524329, 4, 0, 524330, 4, 0, 524331, 4, 0, 524332, 4, 0, 524333, 4, 0, 524334, 4, 0, 524335, 4, 0, 524336, 4, 0, 524337, 4, 0, 524338, 4, 0, 524339, 4, 0, 524340, 4, 0, 524341, 4, 0, 524342, 4, 0, 524354, 4, 0, 524355, 4, 0, 524356, 4, 0, 524357, 4, 0, 524358, 4, 0, 524359, 4, 0, 524360, 4, 0, 524361, 4, 0, 524362, 4, 0, 524363, 4, 0, 524364, 4, 0, 524365, 4, 0, 524366, 4, 0, 524367, 4, 0, 524368, 4, 0, 524369, 4, 0, 524370, 4, 0, 524371, 4, 0, 524372, 4, 0, 524373, 4, 0, 524374, 4, 0, 524375, 4, 0, 524376, 4, 0, 524377, 4, 0, 524378, 4, 0, 524379, 4, 0, 524380, 4, 0, 524381, 4, 0, 524382, 4, 0, 524383, 4, 0, 524384, 4, 0, 524385, 4, 0, 524386, 4, 0, 524387, 4, 0, 524388, 4, 0, 524389, 4, 0, 524390, 4, 0, 524391, 4, 0, 524392, 4, 0, 524393, 4, 0, 524394, 4, 0, 524395, 4, 0, 524396, 4, 0, 524397, 4, 0, 524398, 4, 0, 524399, 4, 0, 655356, 3, 0, 655357, 4, 0, 655358, 4, 0, 655359, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 4, 0, 589840, 4, 0, 589841, 4, 0, 589842, 4, 0, 589843, 4, 0, 589844, 4, 0, 589845, 4, 0, 589846, 4, 0, 589847, 4, 0, 589848, 4, 0, 589849, 4, 0, 589850, 4, 0, 589851, 4, 0, 589852, 4, 0, 589853, 4, 0, 589854, 4, 0, 589855, 4, 0, 589856, 4, 0, 589857, 4, 0, 589858, 4, 0, 589859, 4, 0, 589860, 4, 0, 589861, 4, 0, 589862, 4, 0, 589863, 4, 0, 589864, 4, 0, 589865, 4, 0, 589866, 4, 0, 589867, 4, 0, 589868, 4, 0, 589869, 4, 0, 589870, 4, 0, 589871, 4, 0, 589872, 4, 0, 589873, 4, 0, 589874, 4, 0, 589875, 4, 0, 589876, 4, 0, 589877, 4, 0, 589878, 4, 0, 589890, 4, 0, 589891, 4, 0, 589892, 4, 0, 589893, 4, 0, 589894, 4, 0, 589895, 4, 0, 589896, 4, 0, 589897, 4, 0, 589898, 4, 0, 589899, 4, 0, 589900, 4, 0, 589901, 4, 0, 589902, 4, 0, 589903, 4, 0, 589904, 4, 0, 589905, 4, 0, 589906, 4, 0, 589907, 4, 0, 589908, 4, 0, 589909, 4, 0, 589910, 4, 0, 589911, 4, 0, 589912, 4, 0, 589913, 4, 0, 589914, 4, 0, 589915, 4, 0, 589916, 4, 0, 589917, 4, 0, 589918, 4, 0, 589919, 4, 0, 589920, 4, 0, 589921, 4, 0, 589922, 4, 0, 589923, 4, 0, 589924, 4, 0, 589925, 4, 0, 589926, 4, 0, 589927, 4, 0, 589928, 4, 0, 589929, 4, 0, 589930, 4, 0, 589931, 4, 0, 589932, 4, 0, 589933, 4, 0, 589934, 4, 0, 589935, 4, 0, 720892, 4, 0, 720893, 4, 0, 720894, 4, 0, 720895, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 4, 0, 655382, 4, 0, 655383, 4, 0, 655384, 4, 0, 655385, 4, 0, 655386, 4, 0, 655387, 4, 0, 655388, 4, 0, 655389, 4, 0, 655390, 4, 0, 655391, 4, 0, 655392, 4, 0, 655393, 4, 0, 655394, 4, 0, 655395, 4, 0, 655396, 4, 0, 655397, 4, 0, 655398, 4, 0, 655399, 4, 0, 655400, 4, 0, 655401, 4, 0, 655402, 4, 0, 655403, 4, 0, 655404, 4, 0, 655405, 4, 0, 655406, 4, 0, 655407, 4, 0, 655408, 4, 0, 655409, 4, 0, 655410, 4, 0, 655411, 4, 0, 655412, 4, 0, 655413, 4, 0, 655414, 4, 0, 655426, 4, 0, 655427, 4, 0, 655428, 4, 0, 655429, 4, 0, 655430, 4, 0, 655431, 4, 0, 655432, 4, 0, 655433, 4, 0, 655434, 4, 0, 655435, 4, 0, 655436, 4, 0, 655437, 4, 0, 655438, 4, 0, 655439, 4, 0, 655440, 4, 0, 655441, 4, 0, 655442, 4, 0, 655443, 4, 0, 655444, 4, 0, 655445, 4, 0, 655446, 4, 0, 655447, 4, 0, 655448, 4, 0, 655449, 4, 0, 655450, 4, 0, 655451, 4, 0, 655452, 4, 0, 655453, 4, 0, 655454, 4, 0, 655455, 4, 0, 655456, 4, 0, 655457, 4, 0, 655458, 4, 0, 655459, 4, 0, 655460, 4, 0, 655461, 4, 0, 655462, 4, 0, 655463, 4, 0, 655464, 4, 0, 655465, 4, 0, 655466, 4, 0, 655467, 4, 0, 655468, 4, 0, 655469, 4, 0, 655470, 4, 0, 655471, 4, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 64, 160 )

[node name="Portal" parent="." instance=ExtResource( 5 )]
position = Vector2( 3360, 160 )
next_scene = "res://Scenes/Levels/World2.tscn"
